tests/NormalTests/paczka1/fuzzy1/73802093.err
Error in line 7: 5NZbU A395 48,9
Error in line 12: 5NZbU S45 97,4
Error in line 14: 5NZbU S684 98,1
Error in line 18: mACnNsX32hL S684 68,7
Error in line 19: mACnNsX32hL S974 88,8
Error in line 37: A395 S684 407,83
Error in line 40: L0YtMFSY A395 26,04
